add missing twig package

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
-    "pug": "2.0.0-beta11",
-    "steem": "^0.7.9"
+    "steem": "^0.7.9",
+    "twig": "^1.13.3"
   }
 }
